--- a/src/components/SyntaxHighlighter.css
+++ b/src/components/SyntaxHighlighter.css
@@ -9,9 +9,17 @@
   width: 100%;
   height: 100%;
   padding: 1rem;
+  margin: 0;
+  border: none;
   pointer-events: none;
   overflow: visible;
   z-index: 2;
+  word-wrap: normal;
+  word-break: normal;
+  tab-size: 2;
+  box-sizing: border-box;
+  letter-spacing: normal;
+  word-spacing: normal;
 }
 
 .token-string {
